Fix flex box wrapping

--- a/src/styles/components/contributors.styl
+++ b/src/styles/components/contributors.styl
@@ -4,12 +4,14 @@
   .museum-logos
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     justify-content: space-around
     align-items: center
 
     a
       text-align: center
       flex: 1
+      padding: 2px 4px
 
       img
         height: 60px
